# horror_rpg

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  _quarto.yml  appendix_n.qmd  character_sheet.html  game_rules.qmd  index.qmd  prek.toml  pyproject.toml
_book/: appendix_n.html  game_rules.html  index.html  intro.html  references.html  search.json  summary.html
data/actions/: advance.yml  attack.yml  brawl_attack.yml  fall_back.yml  feint.yml  first_aid.yml  grit.yml  rally.yml  shove.yml  shriek.yml  stand_up.yml  taunt.yml  trip.yml  unarmed_attack.yml
data/actors/: bruiser.yml  controller.yml  medic.yml  occultist.yml  slasher.yml  survivor.yml  terror.yml
data/benchmark_suites/: combat_canonical.yml  core.yml  spatial.yml
data/conditions/: bleeding.yml  feinting.yml  inspired.yml  prone.yml  rattled.yml  steadied.yml
data/core_rules/: default.yml
data/policies/: scripted.yml
data/scenarios/: ballroom_escape.yml  casual_four_vs_triplet.yml  casual_vs_pair.yml  four_pc_push_vs_panic_mix.yml  four_pc_talent_showdown.yml  four_pc_vs_brute_pair.yml  four_pc_vs_control_mix.yml  four_pc_vs_slasher.yml  hallway_ambush.yml  push_vs_panic.yml  single_pc_vs_slasher.yml  talent_showdown.yml  two_pc_vs_brute.yml  two_pc_vs_controller.yml
data/session_plans/: core_night.yml
data/talents/: final_girl.yml  healing_hands.yml
data/weapons/: bat.yml  claws.yml  pistol.yml  unarmed.yml
docs/: appendix_n.html  index.html  search.json
notes/: # Character Generation Manifesto.md  # Differences between TTRPGs and Surviva.md  # Research Doc.md  # Stupid one-page horror RPG.md  AGENTS.md  README.md  dead_by_dawn_intro.md  musing on stealth I am about to feed to Codex.md  session_simulation_goals.md  simulator_design.md  simulator_personas.md
notes/agent_generated/adrs/: 0001-clean-rules-manuscript.md
notes/agent_generated/design/: agent_driven_workflow.md  book_line_plan.md  character_capability_backlog.md  combat_and_chase_separation.md  fictional_resource_model.md  session_simulation_goals.md  simulator_bootstrap.md  simulator_canon_drift_log.md  simulator_design.md  simulator_maintainability_review.md  simulator_rules_inventory_pass.md  spatial_rules_architecture.md  (+3 more)
src/dead_by_dawn_sim/: __init__.py  action_procedure_effects.py  action_procedure_narration.py  action_procedure_resources.py  action_procedure_rolls.py  action_procedure_runtime.py  action_procedure_steps.py  action_procedure_types.py  actions.py  cli.py  combat_support.py  dice.py  engine.py  engine_actions.py  engine_effect_handlers.py  engine_rolls.py  engine_state.py  experiment_reports.py  experiments.py  persona_logic.py  persona_objectives.py  personas.py  policies.py  rules.py  rules_action_models.py  rules_content_models.py  rules_loader.py  rules_validation.py  runner.py  runner_actions.py  runner_reports.py  runner_state.py  runner_types.py  scripted_policies.py  scripted_policy_logic.py  scripted_policy_objectives.py  session.py  state.py
tests/: test_actions.py  test_engine.py  test_helpers.py  test_internals.py  test_personas.py  test_rules.py  test_runner_and_experiments.py  test_scripted_policies.py  test_scripted_policies_yaml.py
tools/: check_module_sizes.py
(+4 files in other folders)
